tests/errors/lib.core.unstack.StackUnderflow.res
══╡ VM Error ╞════════════════════════════════════════════════════════════════════════════════════════════ <script> ══

  Stack underflow

  ┃ File: tests/errors/lib.core.unstack.StackUnderflow.art
  ┃ Line: 2
  ┃ 
  ┃    1 ║  1 2 3 4 5
  ┃    2 ║► unstack 6
  ┃    3 ║
